// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventPageHeaderButtons /> renders correctly with the create event feature toggle set to true and the user being the author 1`] = `
<div>
  <h1>
    Title of my event
  </h1>
  <div
    className="media d-flex align-items-center"
  >
    <Relay(Connect(UserAvatar))
      className="pull-left"
      user={
        Object {
          "$fragmentRefs": null,
          "url": "/licensier",
          "username": "Jpec",
        }
      }
    />
    <EventPageHeaderButtons__UserInfos
      className="media-body"
    >
      <div
        className="excerpt mr-10"
      >
        Jpec
         
        <FormattedMessage
          id="event.header.date"
          values={
            Object {
              "date": "2020:05:05",
            }
          }
        />
      </div>
      <Relay(EventLabelStatus)
        event={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "$fragmentRefs": null,
              "url": "/licensier",
              "username": "Jpec",
            },
            "createdAt": "2020:05:05",
            "id": "Event1",
            "participants": Object {
              "edges": Array [],
            },
            "review": Object {
              "status": "APPROVED",
            },
            "themes": Array [],
            "title": "Title of my event",
            "viewerDidAuthor": true,
          }
        }
      />
    </EventPageHeaderButtons__UserInfos>
  </div>
  <EventPageHeaderButtons__Container>
    <EventDeleteButton
      eventId="Event1"
    />
    <Relay(EventModerationMotiveView)
      event={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "$fragmentRefs": null,
            "url": "/licensier",
            "username": "Jpec",
          },
          "createdAt": "2020:05:05",
          "id": "Event1",
          "participants": Object {
            "edges": Array [],
          },
          "review": Object {
            "status": "APPROVED",
          },
          "themes": Array [],
          "title": "Title of my event",
          "viewerDidAuthor": true,
        }
      }
    />
  </EventPageHeaderButtons__Container>
</div>
`;

exports[`<EventPageHeaderButtons /> renders correcty 1`] = `
<div>
  <h1>
    Title of my event
  </h1>
  <div
    className="media d-flex align-items-center"
  >
    <Relay(Connect(UserAvatar))
      className="pull-left"
      user={
        Object {
          "$fragmentRefs": null,
          "url": "/licensier",
          "username": "Jpec",
        }
      }
    />
    <EventPageHeaderButtons__UserInfos
      className="media-body"
    >
      <div
        className="excerpt mr-10"
      >
        Jpec
         
        <FormattedMessage
          id="event.header.date"
          values={
            Object {
              "date": "2020:05:05",
            }
          }
        />
      </div>
    </EventPageHeaderButtons__UserInfos>
  </div>
</div>
`;
